Fix avatar distorted class chain. Add img selector to avatar distorted class chain.

--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -3,7 +3,7 @@
     width: 300px;
 }
 
-.avatar.distored{
+.avatar.distored img{
     height: 400px;
     width: 200px;
 }
